# opensim-vizcoordinateactuator

./: CMakeLists.txt  RegisterTypes_osimVizCoordinateActuator.cpp  RegisterTypes_osimVizCoordinateActuator.h  VizCoordinateActuator.cpp  VizCoordinateActuator.h  appveyor.yml  osimVizCoordinateActuatorDLL.h  viz.cpp
ex0/: .device.xml.swp  .setup_forward.xml.swp  .viz.py.swp  README.txt  cmc_actuators_LowerBody.xml  default_controls.sto  default_states.sto  default_states_degrees.mot  device.xml  external_loads.xml  ground_reaction.mot  loaded_residual_actuators.xml  setup.xml  setup_forward.xml  subject10_adjusted_loaded_markered_adjusted.osim  viz.py
ex0/results/: loadedwalking_subject10_loaded_free_trial03_cmc_controls.sto  loadedwalking_subject10_loaded_free_trial03_cmc_controls.xml
